<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TOP BAR -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/profile" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/btnNotification"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/white_bg_10"
                    android:padding="16dp"
                    app:srcCompat="@drawable/notification" />

                <ImageView
                    android:id="@+id/btnSettings"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/white_bg_10"
                    android:padding="16dp"
                    app:srcCompat="@drawable/setting" />
            </LinearLayout>

            <!-- BALANCE -->
            <TextView
                android:id="@+id/textViewBalanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/checking_account" />

            <TextView
                android:id="@+id/textViewBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/_185_540"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <!-- ACTION BUTTONS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <!-- DEPOSIT -->
                <LinearLayout
                    android:id="@+id/btnDeposit"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.333"
                    android:background="@drawable/white_bg_15"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/deposite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Deposit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- WITHDRAW -->
                <LinearLayout
                    android:id="@+id/btnWithdraw"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.333"
                    android:background="@drawable/white_bg_15"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/paybill" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/Withdraw"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- TRANSFER -->
                <LinearLayout
                    android:id="@+id/btnTransfer"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.333"
                    android:background="@drawable/white_bg_15"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/transfer" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/transfer"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <!-- REFER CARD -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/white_bg_15">

                <TextView
                    android:id="@+id/textViewReferTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refer_friends"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/TransactionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_10"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/textViewReferTitle"
                    app:layout_constraintTop_toBottomOf="@id/textViewReferTitle"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/textViewReferInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_a_friend_and_enjoy_the_nreward_of_10"
                    app:layout_constraintTop_toBottomOf="@id/TransactionView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <ImageView
                    android:id="@+id/imageViewBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/banner" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGet10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/get_10"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:background="@drawable/green_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- TRANSACTIONS TITLE -->
            <TextView
                android:id="@+id/textViewTransactionsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_history"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"/>

            <!-- RECYCLER VIEW -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>

    <!-- BOTTOM NAVIGATION -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="4dp"
        android:elevation="3dp"
        android:layout_margin="16dp"
        app:itemIconSize="20dp"
        app:itemIconTint="@color/bottom_nav_icon_selector"
        app:itemTextColor="@color/bottom_nav_icon_selector"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
